implementação uso e fornecimento de api

--- a/ProjetoUnivespApi/appsettings.json
+++ b/ProjetoUnivespApi/appsettings.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "SecretKey": "my-32-character-ultra-secure-key-secret",
+    "Issuer": "https://localhost:7093",
+    "Audience": "ProjetoUnivespApi"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=savanaidiomasdbdev;Trusted_Connection=True;AttachDbFileName=D:\\Databases\\ObjectSavanaDB.mdf"
   }
 }
